--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=production
 PORT=5000
-MONGODB_URI={mongodb+srv://rahulchourasia725:rahul*1999@cluster0.pyyusyc.mongodb.net/pureshop?retryWrites=true&w=majority&appName=Cluster0}
+MONGODB_URI={Your MongoDB URI}
 JWT_SECRET={Your Secret}
 PAYPAL_CLIENT_ID={Your PAYPAL CLIENT ID}
